feat : changed the look of the dashboard , added edit and deleted and add functionality